--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,11 @@ edition = "2024"
 
 [dependencies]
 arboard = "3.6.1"
+dirs = "6.0.0"
 ftui = { git = "https://github.com/Dicklesworthstone/frankentui.git", rev = "507542bea6d84bf1d83c438a2168a0194a7e5264", default-features = false, features = ["runtime", "crossterm"] }
+serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
+toml = "0.9.8"
 
 [dev-dependencies]
 proptest = "1.6.0"
