--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ ftui-extras = { git = "https://github.com/Dicklesworthstone/frankentui.git", rev
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 toml = "0.9.8"
+rusqlite = { version = "0.32.1", features = ["bundled"] }
 
 [dev-dependencies]
 proptest = "1.6.0"
